# faceberg

./: .gitignore  ARCHITECTURE.md  LICENSE  MOVE_TABLEINFO_TO_BRIDGE.md  QUICKSTART_LOCAL.md  QUICKSTART_REMOTE.md  README.md  REFACTORING_SUMMARY.md  TEST_CONSOLIDATION.md  demo_table_info.py  experiment.py  faceberg.yml  justfile  plan.md  pyproject.toml
.claude/: settings.json
.github/workflows/: docs.yml  lint.yml  main.yml  publish.yml  test.yml  tests.yml
docs/: CNAME  _quarto.yml  design.qmd  duckdb.qmd  index.qmd  local.qmd
docs/integrations/: _metadata.yml  pandas.qmd
docs/plans/: 2026-01-28-catalog-refactoring-design.md  2026-01-28-config-refactor.md  2026-01-31-rich-catalog-visualization-design.md  2026-01-31-rich-visualization-implementation.md  2026-02-01-pyiceberg-write-tests-design.md  2026-02-02-datasetinfo-single-config-design.md  2026-02-03-quarto-documentation-design.md  2026-02-04-dataset-discovery-design.md  2026-02-04-dataset-discovery.md
examples/: faceberg.yml  test-config.yml
faceberg/: __init__.py  bridge.py  catalog.py  cli.py  config.py  convert.py  database.py  discover.py  discovery.py  iceberg.py  interactive.py  pretty.py  schema.py  server.py  shell.py  testing.py
faceberg/commands/: create.py  init.py
faceberg/spaces/: .gitattributes  Dockerfile  README.md  landing.html
faceberg/tests/: conftest.py  test_bridge.py  test_catalog.py  test_catalog_duckdb.py  test_catalog_pandas.py  test_catalog_pyiceberg.py  test_cli.py  test_config.py  test_convert.py  test_database.py  test_discover.py  test_discovery.py  test_faceberg_catalog.py  test_iceberg.py  test_io.py  test_pretty.py  test_schema.py  test_server.py  test_server_playwright.py  test_testing.py
faceberg/tests/.test_catalog/metadata/default_test_table/metadata/: v0.metadata.json
tests/.test_catalog/: catalog.json
